...
          Row(
            children: [
              SizedBox(
                width: MediaQuery.of(context).size.width - 75,
                child: TextField(
                  controller: controllerURL,
                  key: const ValueKey('keyUrlSend'),
                ),
              ),
              const SizedBox(
                width: 5,
              ),
              SizedBox(
                  width: 60,
                  child: ElevatedButton(
                      key: const ValueKey('keyButtonSend'),
                      onPressed: () async {
                        final retorno = await addFavorite(controllerURL.text);
                        if (retorno.isLeft) {
                          Toast.show(retorno.left.message ?? '', duration: Toast.lengthLong, gravity: Toast.bottom);
                        } else {
                          favoritesController.add(Links(retorno.right.links.self, retorno.right.links.short));
...
